[gd_scene load_steps=13 format=3 uid="uid://c3wjmhoho43yq"]

[ext_resource type="Script" uid="uid://c0t665k63q1gc" path="res://survivors.gd" id="1_ing58"]
[ext_resource type="PackedScene" uid="uid://xuxkmtc4blfe" path="res://player.tscn" id="1_rafyw"]
[ext_resource type="Texture2D" uid="uid://bqrpmtfjuwwle" path="res://coin.png" id="2_r2rfo"]
[ext_resource type="PackedScene" uid="uid://t3didkcb1h8p" path="res://pine_tree.tscn" id="2_w4ohl"]
[ext_resource type="Texture2D" uid="uid://bugdk56skph1k" path="res://objectives.png" id="3_guqcy"]
[ext_resource type="Script" uid="uid://um6bnhqgoacu" path="res://shop.gd" id="5_fotot"]
[ext_resource type="Texture2D" uid="uid://bps6ut1y3uld2" path="res://shop/L10_Shop.png" id="6_guqcy"]
[ext_resource type="Texture2D" uid="uid://b8h33gnv1m620" path="res://shop/L20_Shop.png" id="7_raiau"]
[ext_resource type="Texture2D" uid="uid://bb2q0wwcvxwim" path="res://shop/L40_Shop.png" id="8_l8xsm"]
[ext_resource type="AudioStream" uid="uid://gpe2fk31cd2e" path="res://Sounds/gameover.wav" id="10_raiau"]
[ext_resource type="AudioStream" uid="uid://c66fcbmb5u5cc" path="res://Sounds/shop.wav" id="11_r7ugh"]

[sub_resource type="Curve2D" id="Curve2D_r2rfo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -231, -169, 0, 0, 0, 0, 2108, -174, 0, 0, 0, 0, 2111, 1273, 0, 0, 0, 0, -226, 1268, 0, 0, 0, 0, -224, 1266, 0, 0, 0, 0, -233, -172, 0, 0, 0, 0, -231, -169)
}
point_count = 7

[node name="game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ing58")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1929.0
offset_bottom = 1077.0

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = 25.0
offset_top = 25.0
offset_right = 163.0
offset_bottom = 94.0
color = Color(1, 0.92549, 0.788235, 1)

[node name="Coin" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(44, 45)
scale = Vector2(0.073741, 0.073741)
texture = ExtResource("2_r2rfo")

[node name="coinUI" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 63.0
offset_top = 34.0
offset_right = 153.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="levelNum" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 35.0
offset_top = 61.0
offset_right = 75.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="Objectives" type="Sprite2D" parent="CanvasLayer"]
unique_name_in_owner = true
position = Vector2(120, 172)
texture = ExtResource("3_guqcy")

[node name="obj1" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 41.0
offset_top = 137.0
offset_right = 55.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="obj2" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 41.0
offset_top = 158.0
offset_right = 55.0
offset_bottom = 181.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="obj3" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 41.0
offset_top = 179.0
offset_right = 55.0
offset_bottom = 202.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="obj4" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 41.0
offset_top = 200.0
offset_right = 55.0
offset_bottom = 223.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "X"

[node name="player" parent="." instance=ExtResource("1_rafyw")]
unique_name_in_owner = true
position = Vector2(593, 542)

[node name="Path2D" type="Path2D" parent="player"]
position = Vector2(-593, -542)
curve = SubResource("Curve2D_r2rfo")

[node name="PathFollow2D" type="PathFollow2D" parent="player/Path2D"]
unique_name_in_owner = true
position = Vector2(-231, -169)
rotation = -0.00213766

[node name="PineTree" parent="." instance=ExtResource("2_w4ohl")]
position = Vector2(187, 878)

[node name="PineTree2" parent="." instance=ExtResource("2_w4ohl")]
position = Vector2(1408, 737)

[node name="PineTree3" parent="." instance=ExtResource("2_w4ohl")]
position = Vector2(320, 310)

[node name="PineTree4" parent="." instance=ExtResource("2_w4ohl")]
position = Vector2(1136, 226)

[node name="PineTree5" parent="." instance=ExtResource("2_w4ohl")]
position = Vector2(1224, 201)

[node name="PineTree6" parent="." instance=ExtResource("2_w4ohl")]
position = Vector2(1198, 265)

[node name="PineTree7" parent="." instance=ExtResource("2_w4ohl")]
position = Vector2(995, 951)

[node name="PineTree8" parent="." instance=ExtResource("2_w4ohl")]
position = Vector2(1794, 59)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
autostart = true

[node name="gameover" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="gameover"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.764706)

[node name="Label" type="Label" parent="gameover/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 78
text = "GAME OVER"

[node name="pause" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="pause"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.764706)

[node name="Label" type="Label" parent="pause/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 78
text = "PAUSED"

[node name="Label2" type="Label" parent="pause/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = 48.0
offset_right = 114.5
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE BAR TO RESUME"

[node name="shop" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
script = ExtResource("5_fotot")

[node name="shopBG" type="ColorRect" parent="shop"]
unique_name_in_owner = true
offset_right = 1931.0
offset_bottom = 1078.0
color = Color(0, 0, 0, 0.764706)

[node name="L10Shop" type="Sprite2D" parent="shop"]
unique_name_in_owner = true
position = Vector2(953, 542)
scale = Vector2(2.03, 2.03)
texture = ExtResource("6_guqcy")

[node name="L20Shop" type="Sprite2D" parent="shop"]
unique_name_in_owner = true
visible = false
position = Vector2(953, 542)
scale = Vector2(2.03, 2.03)
texture = ExtResource("7_raiau")

[node name="L40Shop" type="Sprite2D" parent="shop"]
unique_name_in_owner = true
visible = false
position = Vector2(953, 542)
scale = Vector2(2.03, 2.03)
texture = ExtResource("8_l8xsm")

[node name="shopCloseBtn" type="Button" parent="shop"]
unique_name_in_owner = true
offset_left = 1207.0
offset_top = 360.0
offset_right = 1234.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 16
text = "X"

[node name="ShopUpgrade10" type="Button" parent="shop"]
unique_name_in_owner = true
offset_left = 690.0
offset_top = 453.0
offset_right = 995.0
offset_bottom = 497.0
focus_mode = 0
flat = true

[node name="ShopUpgrade20" type="Button" parent="shop"]
unique_name_in_owner = true
offset_left = 690.0
offset_top = 521.0
offset_right = 995.0
offset_bottom = 568.0
focus_mode = 0
flat = true

[node name="ShopUpgrade40" type="Button" parent="shop"]
unique_name_in_owner = true
offset_left = 690.0
offset_top = 594.0
offset_right = 995.0
offset_bottom = 640.0
focus_mode = 0
flat = true

[node name="sfx_shop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_r7ugh")
volume_db = -9.41

[node name="sfx_gameover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_raiau")

[connection signal="health_depleted" from="player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
